# OvenbirdBT

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Config.cpp  Config.hpp  Format.cpp  Format.hpp  PathUtil.cpp  PathUtil.hpp  TorrentClient.cpp  TorrentClient.hpp  TuiApp.cpp  TuiApp.hpp  main.cpp
